<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivUser"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/ic_error"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivUser"
            android:text="@string/name"
            android:layout_marginStart="@dimen/_12sdp"
            android:textStyle="bold"
            android:textColor="@color/_2b2b2b"
            android:textSize="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUsernameVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvUsername"
            app:layout_constraintTop_toTopOf="@id/tvUsername"
            tools:text="@string/name"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUsername"
            android:text="@string/website"
            android:layout_marginStart="@dimen/_12sdp"
            android:textStyle="bold"
            android:textColor="@color/_2b2b2b"
            android:textSize="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUrlVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvUrl"
            app:layout_constraintTop_toTopOf="@id/tvUrl"
            tools:text="@string/name"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"
            android:autoLink="web"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRepoUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUrl"
            android:text="@string/repo_url"
            android:layout_marginStart="@dimen/_12sdp"
            android:textStyle="bold"
            android:textColor="@color/_2b2b2b"
            android:textSize="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRepoUrlVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvRepoUrl"
            app:layout_constraintTop_toTopOf="@id/tvRepoUrl"
            tools:text="@string/name"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"
            android:autoLink="web"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEventsUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRepoUrl"
            android:text="@string/events_url"
            android:layout_marginStart="@dimen/_12sdp"
            android:textStyle="bold"
            android:textColor="@color/_2b2b2b"
            android:textSize="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEventsUrlVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvEventsUrl"
            app:layout_constraintTop_toTopOf="@id/tvEventsUrl"
            tools:text="@string/name"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"
            android:autoLink="web"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEventsUrl"
            android:text="@string/user_type"
            android:layout_marginStart="@dimen/_12sdp"
            android:textStyle="bold"
            android:textColor="@color/_2b2b2b"
            android:textSize="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserTypeVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvUserType"
            app:layout_constraintTop_toTopOf="@id/tvUserType"
            tools:text="@string/name"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"
            android:autoLink="web"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>